Next STep is to Clean all UP

--- a/app/src/main/res/layout/activity_all_species_selection.xml
+++ b/app/src/main/res/layout/activity_all_species_selection.xml
@@ -2,7 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
      android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:fillViewport="true"
     android:contentDescription="@string/user_can" >
 
@@ -47,12 +47,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:gravity="center"
             android:layout_marginBottom="10dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
             android:paddingBottom="8dp"
             android:text="@string/you_can_add_your_own_species_to_the_list"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold" />
+            android:textStyle="italic" />
 
         <!-- RecyclerView for drag-and-drop -->
         <androidx.recyclerview.widget.RecyclerView
