--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,15 +3,14 @@
 <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:fillViewport="true"
     android:background="#801976D2"
-    android:layout_marginBottom="15dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#801976D2"
     android:layout_marginBottom="15dp"
     android:contentDescription="@string/tournament_activity_description">
@@ -35,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Start the Fishing Day"
+        android:text="@string/start_the_fishing_day"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="20sp"
@@ -91,12 +90,12 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="5dp"
-        android:background="@drawable/btn_outline_yellow"
+        android:background="@drawable/btn_outline_orange"
         android:gravity="center"
         android:paddingHorizontal="10dp"
-        android:text="See and Share Catches"
+        android:text="@string/see_and_share_catches"
         android:textColor="@color/clip_blue"
-        android:textSize="28sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/divider10"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,15 +131,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:background="@drawable/btn_outline_red"
+        android:background="@drawable/btn_outline_lt_brown"
         android:gravity="center"
         android:paddingHorizontal="15dp"
         android:text="@string/manual_controls"
         android:textColor="@color/clip_blue"
-        android:textSize="28sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView17" />
 
@@ -179,7 +178,7 @@
         android:gravity="center"
         android:text="@string/voice_controls"
         android:textColor="@color/clip_blue"
-        android:textSize="28sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
