--- a/app/src/main/res/layout/popup_alarm.xml
+++ b/app/src/main/res/layout/popup_alarm.xml
@@ -14,7 +14,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        android:timePickerMode="spinner" />
+        android:timePickerMode="spinner"
+        android:background="@color/very_lite_grey"/>
 
            <!-- Set Alarm Button -->
     <LinearLayout
