--- a/app/src/main/res/layout/popup_length_entry_tour_inches.xml
+++ b/app/src/main/res/layout/popup_length_entry_tour_inches.xml
@@ -104,55 +104,96 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:visibility="visible"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
             <EditText
                 android:id="@+id/edtLengthTourInches"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:layout_gravity="center"
                 android:hint="0-99 Inches"
-                android:textColorHint="@color/lite_grey"
+                android:textColorHint="@color/grey"
                 android:inputType="number"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:background="@color/very_lite_grey"/>
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_gravity="bottom"
                 android:text="@string/inches"
                 android:textSize="20sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
 
 
             <EditText
                 android:id="@+id/edtLengthTour8ths"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:hint="@string/_8ths_of_inch"
+                android:layout_gravity="center"
+                android:hint="@string/_0_7_8ths"
                 android:inputType="number"
                 android:textColor="@color/black"
-                android:textColorHint="@color/lite_grey"
+                android:textColorHint="@color/grey"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:background="@color/very_lite_grey"/>
 
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_gravity="bottom"
                 android:text="@string/_8ths"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <!-- Lbs and Ozs labels  -->
+            <TextView
+                android:id="@+id/textLbsLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight=".5"
+                android:text="@string/inches"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/textOzsLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight=".5"
+                android:text="@string/_8ths_of_inch"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
+
 
         <!-- Save and Cancel Buttons -->
         <LinearLayout
