--- a/app/src/main/res/layout/popup_weight_entry_kgs.xml
+++ b/app/src/main/res/layout/popup_weight_entry_kgs.xml
@@ -95,18 +95,42 @@
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
+                android:layout_marginStart="15dp"
+                android:background="@color/very_lite_grey"
+                android:hint="XX.0 Kgs"
+                android:inputType="number"
+                android:textColor="@color/black"
                 android:gravity="center"
-                android:hint="XX. Kg"
-                android:inputType="number" />
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textView9Grams"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="bottom"
+                android:text="@string/kgs"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
 
             <EditText
                 android:id="@+id/edtWeightGrams"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_weight="1"
+                android:background="@color/very_lite_grey"
                 android:hint="0.XX Kgs"
+                android:inputType="number"
+                android:textColor="@color/black"
                 android:gravity="center"
-                android:inputType="number" />
+                android:layout_gravity="center"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_marginEnd="15dp"/>
+
 
         </LinearLayout>
 
@@ -150,26 +174,25 @@
 
             <Button
                 android:id="@+id/btnCancel"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/Log_green_secondary"
-                android:text="Cancel"
                 android:layout_marginEnd="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/btn_outline_grey"
+                android:text="@string/cancel"
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btnSaveWeight"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/Log_green"
-                android:text="Save Catch"
+                android:text="@string/save_catch"
                 android:textColor="@color/black"
                 android:textSize="20sp"
-                android:textStyle="bold" />
+                android:background="@drawable/btn_outline_orange" />
 
         </LinearLayout>
 
