--- a/app/src/main/res/drawable/btn_outline_lt_brown.xml
+++ b/app/src/main/res/drawable/btn_outline_lt_brown.xml
@@ -2,7 +2,7 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/very_lite_grey"/>
+    <solid android:color="@color/lt_brown"/>
     <stroke
         android:width="4dp"
         android:color="#000000"/>
