--- a/app/src/main/res/layout/activity_catch_entry_inches.xml
+++ b/app/src/main/res/layout/activity_catch_entry_inches.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/Log_red_secondary"
+    android:background="@color/lt_brown"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CatchEntryInches">
@@ -14,10 +14,12 @@
         android:id="@+id/imgBassCatchInches"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:alpha="0.25"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:alpha="0.25"
+        app:layout_constraintVertical_bias="0.50"
         app:srcCompat="@drawable/bass_jumping_boater_no_backing" />
 
     <!-- Page Label -->
