--- a/app/src/main/res/layout/activity_catch_entry_lbs_ozs.xml
+++ b/app/src/main/res/layout/activity_catch_entry_lbs_ozs.xml
@@ -14,10 +14,12 @@
         android:id="@+id/imgBassCatchLbs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:alpha="0.25"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:alpha="0.25"
+        app:layout_constraintVertical_bias="0.50"
         app:srcCompat="@drawable/bass_jumping_boater_no_backing" />
 
     <!-- Page Label -->
