--- a/app/src/main/res/layout/activity_look_up_share_data.xml
+++ b/app/src/main/res/layout/activity_look_up_share_data.xml
@@ -3,7 +3,7 @@
 <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:fillViewport="true"
     android:background="@color/purple_200"
     xmlns:android="http://schemas.android.com/apk/res/android" >
@@ -46,10 +46,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:alpha="0.50"
+            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imgShare"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/google_map_icon" />
 
         <View
@@ -200,30 +202,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/divShare3"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+        <Button
+            android:id="@+id/btnSetUpSharedLookUp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/btn_outline_green"
             android:gravity="center"
-            android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/txtGoToSetUP" >
-
-
-            <Button
-                android:id="@+id/btnSetUpSharedLookUp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="18dp"
-                android:background="@drawable/btn_outline_green"
-                android:gravity="center"
-                android:paddingHorizontal="15dp"
-                android:text="@string/set_up"
-                android:textColor="@color/clip_blue"
-                android:textSize="28sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-        </LinearLayout>
+            android:paddingHorizontal="15dp"
+            android:text="@string/set_up"
+            android:textColor="@color/clip_blue"
+            android:textSize="28sp"
+            android:textStyle="bold"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/txtGoToSetUP" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
