--- a/app/src/main/res/layout/activity_top_five_catches.xml
+++ b/app/src/main/res/layout/activity_top_five_catches.xml
@@ -21,14 +21,25 @@
 
     <!-- Species Spinner -->
 
+    <TextView
+        android:id="@+id/txtSelectSpeciesTop5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="5dp"
+        android:text="@string/select_species"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        android:layout_gravity="center"
+        android:gravity="center"/>
+
+    <!-- Min/Max Weight Input -->
     <Spinner
         android:id="@+id/spinnerSpeciesSummary"
         android:layout_width="match_parent"
-        android:layout_height="65dp"
+        android:layout_height="55dp"
         android:background="@color/Log_yellow_secondary"
         android:textAlignment="center" />
 
-    <!-- Min/Max Weight Input -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,16 +52,16 @@
             android:id="@+id/edtMinWeight"
             android:layout_width="0dp"
             android:layout_height="55dp"
-            android:layout_weight="1"
             android:layout_gravity="center"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="2dp"
+            android:layout_weight="1"
             android:gravity="center"
             android:hint="@string/min_weight"
             android:inputType="numberDecimal"
-            android:textSize="20sp"
             android:textColor="@color/clip_blue"
-            android:textStyle="bold"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="2dp"/>
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtMinUnits"
@@ -94,15 +105,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:gravity="center">
 
         <RadioGroup
             android:id="@+id/radioGroupUnits"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:gravity="center_horizontal"
+            android:gravity="center"
             android:layout_gravity="center"
             android:orientation="horizontal"
             >
@@ -168,19 +181,20 @@
             android:textStyle="bold"
             android:background="@drawable/btn_outline_green"
             android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"/>
+            android:layout_marginEnd="5dp"/>
 
         <Button
             android:id="@+id/btnShareResults"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="10dp"
             android:layout_weight="1"
+            android:background="@drawable/btn_outline_orange"
             android:text="@string/share_results"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:background="@drawable/btn_outline_orange"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
     <Button
