--- a/app/src/main/res/layout/activity_tournament_view.xml
+++ b/app/src/main/res/layout/activity_tournament_view.xml
@@ -27,16 +27,21 @@
 
     <TextClock
         android:id="@+id/timeNOW"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintWidth_percent="0.4"
-        app:layout_constraintHeight_percent="0.085"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="19dp"
         android:background="@color/clip_white"
         android:gravity="center"
+        android:padding="5dp"
+        android:textAllCaps="true"
+        android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
-        android:layout_marginStart="28dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnAlarm"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@string/timer_place_holder" />
