--- a/app/src/main/res/layout/activity_training_words.xml
+++ b/app/src/main/res/layout/activity_training_words.xml
@@ -3,7 +3,7 @@
 <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:fillViewport="true"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -12,7 +12,6 @@
     android:layout_height="wrap_content"
     android:background="@color/clip_orange"
     android:paddingBottom="25dp">
-
 
     <ImageView
         android:id="@+id/imgVCC"
@@ -134,7 +133,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:background="@color/clip_yellow"
+        android:layout_marginBottom="13dp"
+        android:background="@color/green"
         android:clickable="true"
         android:focusable="true"
         android:padding="15dp"
@@ -143,6 +143,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:typeface="serif"
+        app:layout_constraintBottom_toTopOf="@+id/btnUserTalk"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtYouSay" />
@@ -171,6 +172,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:layout_marginBottom="11dp"
         android:background="@color/material_dynamic_neutral90"
         android:hint="@string/what_computer_heard"
         android:padding="15dp"
@@ -178,9 +180,11 @@
         android:textSize="18sp"
         android:textStyle="bold"
         android:typeface="serif"
+        app:layout_constraintBottom_toTopOf="@+id/divider9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnUserTalk" />
+
     <View
         android:id="@+id/divider9"
         android:layout_width="0dp"
