--- a/app/src/main/res/layout/popup_length_entry_inches.xml
+++ b/app/src/main/res/layout/popup_length_entry_inches.xml
@@ -91,26 +91,54 @@
             <EditText
                 android:id="@+id/edtLengthInches"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_weight="1"
+                android:background="@color/very_lite_grey"
                 android:hint="@string/inches"
                 android:inputType="number"
                 android:textColor="@color/black"
                 android:gravity="center"
+                android:layout_gravity="center"
                 android:textSize="20sp"
                 android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/textView9"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="bottom"
+                android:text="@string/inches"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+
 
             <EditText
                 android:id="@+id/edtLength8ths"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="50dp"
                 android:layout_weight="1"
-                android:hint="@string/_8ths_of_inch"
+                android:background="@color/very_lite_grey"
+                android:hint="@string/_0_7_8ths"
                 android:inputType="number"
                 android:textColor="@color/black"
                 android:gravity="center"
+                android:layout_gravity="center"
                 android:textSize="20sp"
                 android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_gravity="bottom"
+                android:text="@string/_8ths"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+
         </LinearLayout>
 
 
