--- a/app/src/main/res/layout/popup_query_event_type.xml
+++ b/app/src/main/res/layout/popup_query_event_type.xml
@@ -4,39 +4,60 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="16dp"
-    android:background="@color/very_lite_grey">
+    android:background="@color/lt_brown">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select Event Type"
-        android:textSize="20sp"
+        android:text="@string/select_event_type"
+        android:textSize="26sp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:paddingBottom="12dp" />
+        android:paddingBottom="12dp"
+        android:layout_gravity="center"
+        android:gravity="center"/>
 
     <RadioGroup
         android:id="@+id/radioGroupEventType"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp">
 
         <RadioButton
             android:id="@+id/radioFunDay"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fun Day" />
+            android:layout_width= "match_parent"
+            android:layout_height="50dp"
+            android:text="@string/fun_Day"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:padding="5dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/btn_outline_grey"/>
 
         <RadioButton
             android:id="@+id/radioTournament"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tournament" />
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="@string/tournament"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:padding="5dp"
+            android:layout_marginBottom="8dp"
+            android:background="@drawable/btn_outline_grey"/>
 
         <RadioButton
             android:id="@+id/radioBoth"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Both" />
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="@string/both"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:padding="5dp"
+            android:background="@drawable/btn_outline_grey" />
+
     </RadioGroup>
 
     <LinearLayout
@@ -44,6 +65,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
+        android:layout_marginHorizontal="10dp"
         android:layout_marginTop="16dp">
 
         <Button
@@ -51,14 +73,22 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Cancel" />
+            android:layout_marginEnd="10dp"
+            android:text="@string/cancel"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:background="@drawable/btn_outline_grey"/>
 
         <Button
             android:id="@+id/btnConfirmEventType"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Confirm" />
+            android:text="@string/confirm"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:background="@drawable/btn_outline_orange" />
     </LinearLayout>
 
 </LinearLayout>
