--- a/app/src/main/res/layout/popup_query_size.xml
+++ b/app/src/main/res/layout/popup_query_size.xml
@@ -10,67 +10,104 @@
         android:id="@+id/txtMeasurementLabel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Select Measurement Type"
-        android:textSize="20sp"
+        android:text="@string/select_measurement_type"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:paddingBottom="12dp" />
+        android:layout_gravity="center"
+        android:paddingBottom="12dp"
+        android:gravity="center" />
 
     <RadioGroup
         android:id="@+id/radioGroupMeasurement"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:gravity="center">
 
         <RadioButton
             android:id="@+id/radioWeight"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Weight" />
+            android:layout_height="50dp"
+            android:text="Weight"
+            android:textSize="22sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:background="@drawable/btn_outline_blue"
+            android:paddingHorizontal="15dp"
+            android:layout_marginHorizontal="15dp"/>
 
         <RadioButton
             android:id="@+id/radioLength"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Length" />
+            android:layout_height="50dp"
+            android:text="Length"
+            android:textSize="22sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:background="@drawable/btn_outline_green"
+            android:paddingHorizontal="15dp"
+            android:layout_marginHorizontal="15dp"/>
     </RadioGroup>
 
     <EditText
         android:id="@+id/edtMinSize"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:inputType="numberDecimal"
         android:hint="Min Size"
-        android:layout_marginTop="12dp" />
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="15dp" />
 
     <EditText
         android:id="@+id/edtMaxSize"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:inputType="numberDecimal"
         android:hint="Max Size"
-        android:layout_marginTop="8dp" />
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="15dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="10dp">
 
         <Button
             android:id="@+id/btnCancelSizeQuery"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Cancel" />
+            android:layout_marginEnd="10dp"
+            android:text="@string/cancel"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:background="@drawable/btn_outline_grey"  />
 
         <Button
             android:id="@+id/btnConfirmSizeQuery"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Confirm" />
+            android:text="@string/confirm"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:background="@drawable/btn_outline_orange"/>
     </LinearLayout>
 
 </LinearLayout>
