--- a/app/src/main/res/layout/popup_query_species.xml
+++ b/app/src/main/res/layout/popup_query_species.xml
@@ -9,16 +9,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select Species"
-        android:textSize="20sp"
+        android:text="@string/select_species"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:paddingBottom="12dp" />
+        android:layout_gravity="center"
+        android:paddingBottom="12dp"
+        android:gravity="center"  />
 
     <Spinner
         android:id="@+id/spinnerSpeciesQuery"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:spinnerMode="dropdown" />
 
     <LinearLayout
@@ -26,21 +28,31 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16dp"
+        android:layout_marginHorizontal="10dp">
 
         <Button
             android:id="@+id/btnCancelSpeciesQuery"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Cancel" />
+            android:layout_marginEnd="10dp"
+            android:text="@string/cancel"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:background="@drawable/btn_outline_grey"/>
 
         <Button
             android:id="@+id/btnConfirmSpeciesQuery"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Confirm" />
+            android:text="@string/confirm"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:background="@drawable/btn_outline_orange" />
+
     </LinearLayout>
 
 </LinearLayout>
