--- a/app/src/main/res/layout/popup_weight_entry_tour_kgs.xml
+++ b/app/src/main/res/layout/popup_weight_entry_tour_kgs.xml
@@ -101,6 +101,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="5dp"
             android:visibility="visible">
 
             <EditText
@@ -111,16 +113,19 @@
                 android:gravity="center"
                 android:hint="00.XX"
                 android:inputType="number"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:background="@color/very_lite_grey"/>
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_gravity="bottom"
                 android:text="@string/kgs"
                 android:textSize="20sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
 
             <EditText
                 android:id="@+id/edtWeightTourGrams"
@@ -129,7 +134,8 @@
                 android:layout_weight="1"
                 android:hint="@string/x_00"
                 android:inputType="number"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:background="@color/very_lite_grey"/>
 
             <TextView
                 android:id="@+id/textView10"
@@ -142,7 +148,38 @@
 
         </LinearLayout>
 
-                    <!-- Save and Cancel Buttons -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal" >
+
+            <!-- Kgs labels  -->
+            <TextView
+                android:id="@+id/textKgsLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Kgs"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/textDecKgsLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="0.XX Kgs"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+
+        </LinearLayout>
+
+
+        <!-- Save and Cancel Buttons -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
